# rho

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  justfile
.github/workflows/: ci.yml  release.yml
crates/rho/: Cargo.toml
crates/rho-agent/: Cargo.toml
crates/rho-agent/benches/: session_replay.rs
crates/rho-agent/examples/: rss_session.rs
crates/rho-agent/src/: clock.rs  events.rs  fake.rs  harness.rs  lib.rs  loop.rs  messages.rs  model_limits.rs  provider.rs  provider_events.rs  tools.rs  types.rs
crates/rho-agent/src/session/: entries.rs  jsonl.rs  memory.rs  mod.rs  storage.rs  tree.rs
crates/rho-agent/tests/: agent_harness.rs  agent_loop.rs  constructors.rs  event_stream_goldens.rs  golden_roundtrip.rs  pi_event_protocol.rs  session.rs
crates/rho-agent/tests/helpers/: mod.rs
crates/rho-ai/: Cargo.toml
crates/rho-ai/benches/: sse_canonicalize.rs
crates/rho-ai/src/: anthropic.rs  engine.rs  env.rs  google.rs  http.rs  http_errors.rs  lib.rs  mistral.rs  model_limits.rs  openai_codex.rs  openai_compatible.rs  retry.rs  stream.rs  types.rs  util.rs  wire.rs
crates/rho-ai/tests/: http_headers.rs  request_goldens.rs  retry.rs  sse_goldens.rs  streaming.rs
crates/rho-ai/tests/support/: mod.rs
crates/rho-coding/: Cargo.toml
crates/rho-coding/data/: catalog.toml
crates/rho-coding/src/: branch_summary.rs  catalog_loader.rs  commands.rs  context.rs  context_window.rs  credentials.rs  diagnostics.rs  events.rs  fmt_util.rs  lib.rs  login_required.rs  oauth.rs  oauth_anthropic.rs  oauth_device.rs  oauth_github_copilot.rs  oauth_http.rs  oauth_registry.rs  oauth_types.rs  paths.rs  print_mode.rs  prompt_templates.rs  provider_catalog.rs  provider_config.rs  provider_runtime.rs  pystr.rs  reload.rs  resources.rs  session.rs  session_export.rs  session_manager.rs  session_stats.rs  skills.rs  system_prompt.rs  thinking.rs
crates/rho-coding/src/commands/: tests.rs
crates/rho-coding/src/extensions/: fake_host.rs  mod.rs  tests.rs
crates/rho-coding/src/rendering/: json.rs  mod.rs  plain.rs  tests.rs  tool_call.rs  transcript.rs
crates/rho-coding/src/tools/: difflib.rs  edit_match.rs  mod.rs  subprocess.rs  tests.rs  truncation.rs
crates/rho-coding/tests/: coding_session.rs  crosscheck.rs  crosscheck_v2.rs  provider_catalog.rs  provider_config.rs  session_events_golden.rs  system_prompt_golden.rs  wasm_extension.rs
crates/rho-ext-api/: Cargo.toml
crates/rho-ext-api/src/: lib.rs  runtime.rs
crates/rho-ext-api/wit/: rho-extension.wit
crates/rho-ext-host/: Cargo.toml
crates/rho-ext-host/src/: discovery.rs  host.rs  lib.rs  payload.rs  wasm.rs
crates/rho-ext-host/tests/: wasm_integration.rs
crates/rho-tui/: Cargo.toml
crates/rho-tui/benches/: transcript_render.rs
crates/rho-tui/src/: adapter.rs  app.rs  autocomplete.rs  ext_ui.rs  file_drop.rs  lib.rs  login.rs  modals.rs  motion.rs  pystr.rs  state.rs  terminal_title.rs  theme.rs
crates/rho-tui/src/widgets/: composer.rs  footer.rs  mod.rs  sidebar.rs  status.rs  style.rs  transcript.rs
crates/rho-tui/tests/: adapter.rs  autocomplete.rs  snapshots.rs
crates/rho-tui/tests/snapshots/: snapshots__completion_popup.snap  snapshots__footer_completion.snap  snapshots__footer_normal.snap  snapshots__footer_running.snap  snapshots__modal_api_key_login.snap  snapshots__modal_branch_summary.snap  snapshots__modal_command_output.snap  snapshots__modal_custom_provider_login.snap  snapshots__modal_extension_confirm.snap  snapshots__modal_extension_input.snap  snapshots__modal_extension_select.snap  snapshots__modal_login_method_picker.snap  snapshots__modal_login_provider_picker.snap  snapshots__modal_model_picker.snap  snapshots__modal_notice_m7.snap  snapshots__modal_oauth_login.snap  snapshots__modal_oauth_login_device.snap  snapshots__modal_session_picker.snap  snapshots__modal_theme_picker.snap  snapshots__modal_tree_picker.snap  snapshots__queued_messages.snap  snapshots__rho_splash.snap  snapshots__sidebar.snap  snapshots__status_line.snap  snapshots__transcript.snap  snapshots__transcript_follows_bottom.snap  snapshots__working_status_line.snap
crates/rho/src/: main.rs
crates/rho/tests/: tui_login_required.rs
dev-notes/: benchmarks.json  benchmarks.md  identity-vs-parity.md  m7-extension-design.md  oauth-manual-checklist.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4a.md  phase-4b-oauth.md  phase-4b-provider-catalog.md  phase-4b1.md  phase-4b2.md  phase-5.md  phase-6.md  phase-7.md
docs/: methodology.md
examples/extensions/: .gitignore  build.sh
examples/extensions/hello_tool/: Cargo.toml
examples/extensions/hello_tool/src/: lib.rs
examples/extensions/permission_gate/: Cargo.toml
examples/extensions/permission_gate/src/: lib.rs
examples/extensions/sandbox_probe/: Cargo.toml
examples/extensions/sandbox_probe/src/: lib.rs
fixtures/: TAU_REV
fixtures/export/: kitchen-sink.html
fixtures/sessions/: branched.jsonl  compaction.jsonl  kitchen-sink.jsonl  legacy-v1.expected.jsonl  legacy-v1.jsonl  linear.jsonl
fixtures/system-prompt/: default_coding_tools.txt
fixtures/wire-legacy/: assistant_camel_toolcalls.expected.json  assistant_camel_toolcalls.jsonl  assistant_list_content_tool_calls.expected.json  assistant_list_content_tool_calls.jsonl  assistant_string_content_only.expected.json  assistant_string_content_only.jsonl  assistant_string_content_tool_calls.expected.json  assistant_string_content_tool_calls.jsonl  assistant_usage_cost_null.expected.json  assistant_usage_cost_null.jsonl  assistant_usage_null.expected.json  assistant_usage_null.jsonl  tool_data_only.expected.json  tool_data_only.jsonl  tool_error_empty_content.expected.json  tool_error_empty_content.jsonl  tool_error_empty_string.expected.json  tool_error_empty_string.jsonl  tool_ok_data_details.expected.json  tool_ok_data_details.jsonl  tool_ok_falsy_zero.expected.json  tool_ok_falsy_zero.jsonl  user_custom_type_camel.expected.json  (+3 more)
tools/bench/: PI_REV  (+10 more)
tools/mock-provider/: Cargo.toml
tools/mock-provider/src/: lib.rs  main.rs
(+169 files in other folders)
