[package]
name = "rho-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Portable agent core: messages, events, provider trait, tools, loop, harness, session."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
monostate = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
