[package]
name = "rho-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Portable agent core: messages, events, provider trait, tools, loop, harness, session."

[lints]
workspace = true

[features]
# `fake` exposes the scriptable `FakeProvider` test double (tau puts it in
# `tau_ai`, but rho-agent must not depend on rho-ai; see `fake.rs`). It is a
# public util so rho-ai/rho-coding tests and the golden harness can drive it.
default = ["fake"]
fake = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
monostate = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
criterion = { workspace = true }
flate2 = { workspace = true }
serde_json = { workspace = true }

# Session-replay throughput (M6, family b). Runs locally via `just bench`;
# CI only compiles it (`cargo bench --no-run`) — see dev-notes/phase-6.md.
[[bench]]
name = "session_replay"
harness = false

# Scripted 500-turn FakeProvider session for the RSS/memory benchmark (M6,
# family d); driven under `/usr/bin/time -l` by tools/bench.
[[example]]
name = "rss_session"
