[package]
name = "rho-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Provider adapters and model streaming layer (Anthropic, OpenAI, Codex, Google, Mistral, fake)."

[lints]
workspace = true

[dependencies]
rho-agent = { package = "rho-agent-core", path = "../rho-agent", version = "0.1.1", features = ["fake"] }
serde_json = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
reqwest = { workspace = true }
bytes = "1"
tokio = { version = "1", features = ["time", "sync"] }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
mock-provider = { path = "../../tools/mock-provider" }
criterion = { workspace = true }

# SSE canonicalization micro-bench (M6, family c). Local via `just bench`; CI
# compiles only (`cargo bench --no-run`).
[[bench]]
name = "sse_canonicalize"
harness = false
