[package]
name = "rho-coding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Coding agent: tools, CodingSession, commands, skills, catalog, oauth, export, rendering."

[lints]
workspace = true

[dependencies]
rho-agent = { path = "../rho-agent" }
rho-ai = { path = "../rho-ai" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
monostate = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
tempfile = "3"
os_pipe = "1"
uuid = { workspace = true }
sha2 = "0.10"
async-trait = { workspace = true }
regex = "1"
reqwest = { workspace = true }
base64 = "0.22"
getrandom = "0.2"
url = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
