[package]
name = "rho-ext-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Extension guest API — the types an extension links against. Stub until M7."

[lints]
workspace = true

[dependencies]
