[package]
name = "rho-ext-host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WASM extension host (wasmtime) — loads and sandboxes rho extensions. Stub until M7."

[lints]
workspace = true

[dependencies]
