[package]
name = "rho-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Terminal UI (ratatui) for the rho coding agent — port of tau's Textual TUI."

[lints]
workspace = true

[dependencies]
rho-coding = { path = "../rho-coding" }
