[package]
name = "rho"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The rho command-line coding agent (binary)."
default-run = "rho"

[[bin]]
name = "rho"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
