[package]
name = "rho"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The rho command-line coding agent (binary)."
default-run = "rho"

[[bin]]
name = "rho"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
rho-agent = { path = "../rho-agent" }
rho-ai = { path = "../rho-ai" }
rho-coding = { path = "../rho-coding" }
