# crates.io package name is `rho-code` because the bare `rho` name is squatted
# (crates.io/crates/rho — "Future project", unrelated). The *installed binary*
# is still `rho` via the [[bin]] rename below, so `cargo install rho-code`
# yields a `rho` command. The crate directory stays crates/rho.
[package]
name = "rho-code"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "rho — a minimalist Pi-style coding-agent harness (Rust port of tau). Installs the `rho` command."
keywords = ["cli", "coding-agent", "llm", "ai", "tui"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"
default-run = "rho"

[[bin]]
name = "rho"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Build the `rho` binary with the real WASM extension runtime. Off by default so
# the shipped default build stays lean; `cargo build -p rho --features wasmtime`
# (or `--features rho/wasmtime`) links wasmtime and loads `-x` extensions.
default = []
wasmtime = ["rho-coding/wasmtime"]

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
rho-agent = { path = "../rho-agent", version = "0.1.0" }
rho-ai = { path = "../rho-ai", version = "0.1.0" }
rho-coding = { path = "../rho-coding", version = "0.1.0" }
rho-tui = { path = "../rho-tui", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
