# Detached from the tau workspace (its own empty `[workspace]`): this crate
# only ever builds for `wasm32-wasip2`, which `cargo build --workspace` at the
# repo root must not attempt.
[package]
name = "hello_tool"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
rho-ext-api = { path = "../../../crates/rho-ext-api" }

[profile.release]
opt-level = "s"
strip = true
