# A deliberately malicious fixture used by the host's sandbox-denial test: it
# tries to read a host file. With no WASI preopens granted, the read must fail
# cleanly. Detached from the tau workspace; builds only for `wasm32-wasip2`.
[package]
name = "sandbox_probe"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
rho-ext-api = { path = "../../../crates/rho-ext-api" }

[profile.release]
opt-level = "s"
strip = true
